<resources>
    <string name="app_name">Rmrs-customer</string>
    <string name="title_alert">Alert!</string>
    <!--    <string name="google_maps_api">AIzaSyDuvFY98SoqVE13WehzpevmD6bZVgBcspo</string>-->
<!--    <string name="google_maps_api">AIzaSyCnD-96rmf-OjFwXayM5GEZMcCTNEs9WUk</string>-->
    <string name="google_maps_api">AIzaSyBOT63-FywSc-S1M2v3IlHPp48inBJ1FFI</string>

    //Splash
    <string name="title_delivery_food">Ab App Ki Nahin, Aap Ki Marzi Chalay Gi!</string>
    <string name="title_order_food">Order food and get delivery in the fastest time in the town</string>
    <string name="title_by">The Project of KPK Government</string>

    //Signin
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="title_signin">Sign In</string>
    <string name="title_remember">Remember me</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="title_no_account">Don"'"t have an account?</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_login">Login</string>
    <string name="title_send_email">Send Email</string>

    //Registration
    <string name="hint_sign_up">Sign up</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_cnic">CNIC (xxxxxxxxxxxxx)</string>
    <string name="hint_address">Address</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_phn_number">Phone Number (Optional)</string>
    <string name="hint_confirm_password">Confirm Password</string>

    //Verify OTP
    <string name="title_verify_account">Verify Account</string>
    <string name="title_send_code">We have sent you an email with a code to </string>
    <string name="title_no_code">Don"'"t you received any code? </string>
    <string name="title_resend_code">Resend Code</string>
    <string name="title_verify">Verify</string>

    //Forgot Password
    <string name="title_associated_email">Enter the email address associated with your account</string>
    <string name="title_email_link">We will email you a link to reset your password</string>
    <string name="title_send">Send</string>

    //Home Screen
    <string name="title_current_location">Current Location</string>
    <string name="title_eat">Let"'"s eat \nQuality food</string>
    <string name="hint_search_food">Search food..</string>
    <string name="title_categories">Categories</string>
    <string name="title_deals">Deals</string>
    <string name="title_restaurants">Restaurants</string>
    <string name="title_filter">Filters</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_variants">Variants</string>
    <string name="title_lucky_points">Lucky Points: </string>

    //Profile Screen
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="title_phn_number">Phone Number</string>
    <string name="title_password">Password</string>
    <string name="title_edit_profile">Edit Profile</string>

    //Toolbar Strings
    <string name="title_toolbar_favourite">Favourite</string>
    <string name="title_toolbar_cart">My Cart</string>
    <string name="title_toolbar_profile">My Profile</string>
    <string name="title_toolbar_restaurants">Restaurants</string>
    <string name="title_toolbar_update_password">Update Password</string>

    //Cart Strings
    <string name="title_cart">Your Cart</string>
    <string name="title_delivery_location">Delivery Location</string>
    <string name="title_proceed_to_pay">Proceed to pay</string>
    <string name="title_item_total">Item Total</string>
    <string name="title_discount_total">Discount Total</string>
    <string name="title_delivery_charges">Delivery charges</string>
    <string name="title_tax">Sales Tax</string>
    <string name="title_service_charges">Service Charges</string>
    <string name="title_no_charges">No charges</string>
    <string name="title_total_pay">Total to pay</string>
    <string name="title_add_to_cart">Add to cart</string>
    <string name="title_clear_cart">You have already selected products from a different restaurant. If you continue, your cart and selection will be removed.</string>
    <string name="title_continue">Continue</string>
    <string name="title_close">Close</string>

    //Checkout Strings
    <string name="title_payment_method">Payment Method</string>
    <string name="title_cod">Cash on delivery</string>
    <string name="title_ep">Easy Paisa </string>
    <string name="title_checkout">Checkout</string>
    <string name="title_special_ins">Special Instructions</string>

    //My Orders Strings
    <string name="title_my_orders">My Orders</string>
    <string name="title_past_orders">Past Orders</string>
    <string name="title_edit">Edit</string>

    //Order Detail
    <string name="title_order_detail">Order Details</string>
    <string name="title_order_number">Your order number:</string>
    <string name="title_order_from">Your order from:</string>
    <string name="title_delivery_address">Delivery address</string>
    <string name="title_sub_total">Subtotal</string>
    <string name="title_delivery_fee">Delivery fee</string>
    <string name="title_sales_tax">Sales tax</string>
    <string name="title_total">Total (incl. GST)</string>
    <string name="title_reorder">Reorder</string>
    <string name="status_pending">Pending</string>
    <string name="title_reserved">Reserved</string>
    <string name="title_rejected">Rejected</string>
    <string name="title_confirmed">Confirmed</string>
    <string name="status_in_progress">In Progress</string>
    <string name="title_special_instructions">Special Instructions</string>
    <string name="title_choose">Choose Your </string>
    <string name="title_select_one">Select one</string>
    <string name="title_required">1 Required</string>

    //Filter Search
    <string name="title_select_category">Select Categories:</string>
    <string name="title_select_price_range">Select Price Range:</string>
    <string name="title_search">Search</string>

    //Update Password
    <string name="title_update_password">Change Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="title_update">Update</string>
    <string name="title_change_password">You must update your password now.</string>
    <string name="title_logout">Logout</string>


    //Reservation
    <string name="title_reservation">Reservation</string>
    <string name="title_my_reservations">My Reservations</string>
    <string name="title_favourite">Favourite</string>
    <string name="hint_customer_name">Customer Name</string>
    <string name="hint_customer_phn_no">Contact no</string>
    <string name="hint_no_of_people">Number of peoples</string>
    <string name="hint_reservation_time">Reservation Time</string>
    <string name="title_place_reservation">Place Reservation</string>


    //Error Strings
    <string name="err_email">Enter valid email address</string>
    <string name="err_old_password">Please Enter Old Password</string>

    <string name="err_password">The password should contain at least 8 characters, including at least one lower case letter, one upper case letter, one number and one punctuation mark</string>
    <string name="err_password_confirmation">Please re-enter the password</string>
    <string name="err_full_name">Enter Full Name</string>
    <string name="err_mobile">Enter valid mobile number</string>
    <string name="err_cnic">Enter CNIC</string>
    <string name="err_address">Enter Address</string>
    <string name="err_no_internet">No internet connection! Try again.</string>
    <string name="err_already_added">Selected item already added</string>
    <string name="err_greater_time">Selected time must be greater than current time</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_my_reservations">My Reservations</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_bottom_nav">Bottom Navigation</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    <string name="title_give_review">LEAVE US A REVIEW AND LET US KNOW HOW WE DID</string>
    <string name="title_review">Review</string>
    <string name="title_customer_name">Customer name</string>
    <string name="title_submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="version_number">Version: 1.0.5</string>


</resources>