<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_cart"/>
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_my_orders"/>
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_booking"
            android:title="@string/menu_my_reservations"/>

        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_heart"
            android:title="@string/menu_favourite"/>


        <item
            android:id="@+id/nav_verify"
            android:icon="@drawable/ic_heart"
            android:title="verify Invoice"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_update_password"
            android:icon="@drawable/ic_iconfinder_change_password_7023958"
            android:title="@string/title_update_password"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_svgrepo_com"
            android:title="@string/title_logout"/>

    </group>
</menu>