<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.forgotpassword.ForgotPasswordActivity">
    <data>
        <variable
            name="forgot_password_view_model"
            type="com.teletaleem.rmrs_customer.ui.forgotpassword.ForgotPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_title_forgot_pass_afp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxxl"
            android:text="@string/title_forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_l"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/img_user_afp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forgot_user"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_forgot_pass_afp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_xxxl" />

        <TextView
            android:id="@+id/txt_associated_Account_afp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_associated_email"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/img_user_afp"
            android:layout_marginTop="@dimen/margin_xxxxl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_xxl"
            android:layout_marginEnd="@dimen/margin_xxl"/>

        <TextView
            android:id="@+id/txt_email_link_afp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_email_link"
            android:textAppearance="?android:textAppearanceSmall"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/txt_associated_Account_afp"
            android:layout_marginTop="@dimen/margin_l"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_xl"
            android:layout_marginEnd="@dimen/margin_xl"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_forgot_pass_ar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xxl"
            android:layout_marginTop="@dimen/margin_xl"
            android:layout_marginEnd="@dimen/margin_xxl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email_link_afp"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/edtxt_forgot_pass_ar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_send_email_afp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:paddingTop="@dimen/padding_xl"
            android:paddingBottom="@dimen/padding_xl"
            android:text="@string/title_send_email"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_forgot_pass_ar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_xxxl"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
