<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="update_password_view_model"
            type="com.teletaleem.rmrs_customer.ui.updatepassword.UpdatePasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_title_update_password_al"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xxxxl"
                android:text="@string/title_update_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_l"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_upf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xxl"
                android:layout_marginTop="@dimen/margin_xxxxl"
                android:layout_marginEnd="@dimen/margin_xxl"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_update_password_al"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_password_upf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_password_upf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xxl"
                android:layout_marginTop="@dimen/margin_xl"
                android:layout_marginEnd="@dimen/margin_xxl"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password_upf"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_confirm_password_upf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login_al"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xxxl"
                android:layout_marginTop="@dimen/margin_xxl"
                android:layout_marginEnd="@dimen/margin_xxxl"
                android:background="@drawable/button_background"
                android:paddingTop="@dimen/padding_xl"
                android:paddingBottom="@dimen/padding_xl"
                android:text="@string/title_update"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_confirm_password_upf" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>